# ssb_implementation

./: .appveyor.yml  .codecov.yml  .editorconfig  .gitattributes  .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE-2.0  README.md  rustfmt.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  enhancement_request.md  feature_request.md
.github/workflows/: build_workspace.yml
.scripts/: kcov.sh  push_artifacts.bat  vapoursynth-install.sh  vapoursynth64-install.bat  vapoursynth64-install.ps1
ssb_filter/: Cargo.toml  README.md  build.rs  cbindgen.toml  manifest.rs
ssb_filter/src/: c.rs  lib.rs  vapoursynth.rs
ssb_filter/src/vapoursynth/: mod.rs
ssb_filter/tests/: c_tests.rs  platform.irs  test.vpy  vapoursynth_tests.rs
ssb_parser/: CHANGES.md  Cargo.toml  README.md
ssb_parser/src/: data.rs  error.rs  lib.rs  processing.rs  processors.rs  ssb.pest  ssb_event_data.pest  types.rs  utils.rs
ssb_parser/src/objects/: event_objects.rs  mod.rs  ssb_objects.rs
ssb_parser/src/parsers/: mod.rs  ssb.rs  ssb_render.rs
ssb_parser/src/state/: error.rs  mod.rs  ssb_state.rs
ssb_parser/src/types/: error.rs  geometries.rs  mod.rs  objects.rs  ssb.rs  state.rs  tags.rs
ssb_parser/src/utils/: constants.rs  functions.rs  mod.rs  state.rs
ssb_parser/src/utils/functions/: convert.rs  event_iter.rs  macros.rs  mod.rs  option.rs
ssb_parser/tests/: code_structure_tests.rs  grammar_tests.rs  log_tests.rs  parse_tests.rs  serialization_tests.rs  ssb_alpha.pest  test.ssb
ssb_renderer/: Cargo.toml  README.md  config.rs
ssb_renderer/benches/: rendering_benches.rs
ssb_renderer/src/: error.rs  lib.rs  rendering.rs
ssb_renderer/src/g2d/: base.rs  error.rs  flatten.rs  image.rs  math.rs  mod.rs  path.rs
ssb_renderer/src/g2d/raster/: image.rs  mask.rs  mod.rs  rasterize.rs  scanline.rs  scanlines.rs
ssb_renderer/src/g2d/vector/: flatten.rs  mod.rs  path.rs  point.rs  stroke.rs  transformation.rs  types.rs
ssb_renderer/src/gl_utils/: environment.rs  error.rs  macros.rs  mod.rs  safe.rs
ssb_renderer/src/ssb/: error.rs  mod.rs  rendering.rs
ssb_renderer/src/types/: error.rs  mod.rs  parameter.rs
ssb_renderer/tests/: accel_tests.rs  font_tests.rs  gl_utils_tests.rs  math_expr_tests.rs  rendering_tests.rs  tessellation_tests.rs
