[package]
# Project information
name = "ssb_filter"
version = "0.0.0"
authors = ["Christoph 'Youka' Spanknebel"]
description = "Interfaces to ssb rendering for video frameserving and language bridges."
# Project type
workspace = ".."
edition = "2018"
# Documentation
keywords = ["ssb", "filter", "subtitle", "video", "processing"]
categories = ["rendering::data-formats"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/substation-beta/ssb_implementation"
# Don't package development stuff
exclude = ["tests/**/*", "benches/**/*"]
# Generate metadata (manifest embedding & C header)
build = "build.rs"

[badges]
# Development status
travis-ci = {repository = "substation-beta/ssb_implementation", branch = "master"}
appveyor = {repository = "Youka/ssb_implementation", branch = "master", service = "github"}
codecov = {repository = "substation-beta/ssb_implementation", branch = "master", service = "github"}
maintenance = {status = "actively-developed"}

[lib]
# Compile to C dynamic library
crate-type = ["cdylib"]
# Documentation embedded code doesn't need tests
doctest = false

[features]
# Add at least one media framework
default = ["vapoursynth-interface"]
# Modern media frameworks
vapoursynth-interface = ["vapoursynth", "failure"]
mediafoundation-interface = ["winapi"]
gstreamer-interface = ["gstreamer"]
# GPGPU support by renderer
gpgpu = ["ssb_renderer/gpgpu"]

[dependencies]
# Depend on renderer module
ssb_renderer = {path = "../ssb_renderer", version = "0.0.1"}
# Debugging
failure = {version = "~0.1.5", optional = true}   # https://crates.io/crates/failure
# Interface frameworks
libc = "~0.2.62"    # https://crates.io/crates/libc
vapoursynth = {version = "~0.2.0", features = ["vapoursynth-functions", "vsscript-functions"], optional = true}  # https://crates.io/crates/vapoursynth
gstreamer = {version = "~0.14.4", optional = true}   # https://crates.io/crates/gstreamer

[target.'cfg(windows)'.dependencies]
# Interface frameworks
winapi = {version = "~0.3.7", optional = true}   # https://crates.io/crates/winapi

[dev-dependencies]
# DLL loading
libloading = "~0.5.2"   # https://crates.io/crates/libloading

[build-dependencies]
# C header generation
cbindgen = "~0.9.0" # https://crates.io/crates/cbindgen

[target.'cfg(windows)'.build-dependencies]
# Manifest
embed-resource = "~1.1.4"   # https://crates.io/crates/embed-resource
# Date & time
chrono = "~0.4.6"   # https://crates.io/crates/chrono