[package]
# Project information
name = "ssb_parser"
version = "0.2.3"
authors = ["Christoph 'Youka' Spanknebel"]
description = "Parser for *.ssb files."
# Project type
workspace = ".."
edition = "2018"
# Documentation
keywords = ["ssb", "parser", "subtitle", "text"]
categories = ["parsing"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/substation-beta/ssb_implementation"
# Don't package development stuff
exclude = ["tests/**/*", "benches/**/*"]

[badges]
# Development status
travis-ci = {repository = "substation-beta/ssb_implementation", branch = "master"}
appveyor = {repository = "Youka/ssb_implementation", branch = "master", service = "github"}
codecov = {repository = "substation-beta/ssb_implementation", branch = "master", service = "github"}
maintenance = {status = "actively-developed"}

[features]
# All features used by default
default = ["serialization"]
# Serialization
serialization = ["serde"]

[lib]
# Compile to Rust static library
crate-type = ["rlib"]
# Documentation embedded code doesn't need tests
doctest = false

[dependencies]
# Text parsing
regex = "~1.1.7"    # https://crates.io/crates/regex
base64 = "~0.10.1" # https://crates.io/crates/base64
# Utilities
lazy_static = "~1.3.0"   # https://crates.io/crates/lazy_static
# Debugging
log = "~0.4.6"  # https://crates.io/crates/log
# Serialization
serde = {version = "~1.0.94", features = ["derive"], optional = true}  # https://crates.io/crates/serde

[dev-dependencies]
# Logging
simple-logging = "~2.0.2"  # https://crates.io/crates/simple-logging
# Serialization
serde_json = "~1.0.39"  # https://crates.io/crates/serde_json