[package]
# Project information
name = "ssb_renderer"
version = "0.0.0"
authors = ["Christoph 'Youka' Spanknebel"]
description = "Renderer of ssb_parser results on images."
# Project type
workspace = ".."
edition = "2018"
# Documentation
keywords = ["ssb", "renderer", "subtitle", "2d", "graphics"]
categories = ["rendering::data-formats"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/substation-beta/ssb_implementation"
# Don't package development stuff
exclude = ["tests/**/*", "benches/**/*"]

[badges]
# Development status
travis-ci = {repository = "substation-beta/ssb_implementation", branch = "master"}
appveyor = {repository = "Youka/ssb_implementation", branch = "master", service = "github"}
codecov = {repository = "substation-beta/ssb_implementation", branch = "master", service = "github"}
maintenance = {status = "actively-developed"}

[lib]
# Compile to Rust static library
crate-type = ["rlib"]
# Documentation embedded code doesn't need tests
doctest = false

[dependencies]
# Depend on parser module
ssb_parser = {path = "../ssb_parser", version = "0.2.1", default-features = false}
# Render targets
image = "~0.21.2"   # https://crates.io/crates/image
# Fonts & text
font-loader = "~0.8.0"   # https://crates.io/crates/font-loader
rusttype = "~0.7.7"  # https://crates.io/crates/rusttype
glyph_brush_layout = "~0.1.6"   # https://crates.io/crates/glyph_brush_layout
# Math expressions
meval = "~0.2.0"  # https://crates.io/crates/meval
# Debugging
log = "~0.4.6"  # https://crates.io/crates/log

[[bench]]
# File to execute
name = "rendering_benches"
# Disable standard benchmarking harness in favor of microbench
harness = false

[dev-dependencies]
# Profiling
microbench = "~0.5.0"   # https://crates.io/crates/microbench