[package]
# Project information
name = "ssb_renderer"
version = "0.0.1"
authors = ["Christoph 'Youka' Spanknebel"]
description = "2d graphics software renderer for ssb format."
# Project type
workspace = ".."
edition = "2018"
# Documentation
keywords = ["ssb", "renderer", "subtitle", "2d", "graphics"]
categories = ["rendering::data-formats"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/substation-beta/ssb_implementation"

[lib]
# Compile to Rust static library
crate-type = ["rlib"]
# Documentation embedded code doesn't need tests
doctest = false

[[bench]]
# File to execute
name = "rendering_benches"
# Disable standard benchmarking harness in favor of microbench
harness = false

[dependencies]
# Depend on parser module
ssb_parser = {path = "../ssb_parser", version = "0.4.0", default-features = false}
# 2d graphics
puny2d = "~0.0.2"   # https://crates.io/crates/puny2d
# Math expressions
meval = "~0.2.0"  # https://crates.io/crates/meval

[dev-dependencies]
# Profiling
microbench = "~0.5.0"   # https://crates.io/crates/microbench
# Render target
image = "~0.23.13"   # https://crates.io/crates/image